[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "singular",
]


[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt", "net", "rt-multi-thread", "fs"] }
actix = "0.13.0"
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-web-actors = "4.2"
actix-ws = "0.2.5"
actix-rt = { version = "2.8.0", features = ["macros"] }
actix-cors = "0.6.4"
log = "0.4.19"
env_logger = "0.10.0"
futures-util = "0.3.28"
futures = "0.3.28"
strum_macros = "0.25.0"
serde_yaml = "0.9.21"
log4rs = "1.2.0"
awc = { version = "3.1.1", features = ["rustls"] }


singular = { path = "singular"}
