[package]
name = "GqLib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.18.0"
url = "2.3.1"
http = "0.2.9"
reqwest = { version = "0.11.14", features = ["json", "blocking"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"